# multicloud-storage

./: .editorconfig  .env  .gitignore  .pylintrc  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: workflow.yaml
multicloud_storage/: __init__.py  client.py  config.py  exception.py  gcs.py  http.py  log.py  minio.py  object.py  storage.py
tests/: gcs_test.py  minio_test.py  s3_test.py  storage_test.py
