[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "multicloud_storage"
author = "Adam Williams"
author-email = "adam.williams@onxmaps.com"
home-page = "https://github.com/awill1988/multicloud-storage"
requires-python = ">=3.7"
requires = ["google-cloud-storage", "minio"]
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html"]

[tool.black]
line-length = 10
experimental-string-processing = true
