[build-system]
requires = ["flit_core >=2,<4", "setuptools", "wheel"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "multicloud_storage"
author = "Adam Williams"
author-email = "adamwt88@gmail.com"
requires = ["google-cloud-storage", "minio", "python-dotenv", "setuptools"]
home-page = "https://github.com/awill1988/multicloud-storage"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description-file = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 10
experimental-string-processing = true
